--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
          <li>
              <strong>Cozimento</strong> 5 minutos
          </li>
+         </ul>
     </div>
     
           <div class="ingredientes">
@@ -37,10 +38,10 @@
              
                  <ul>
                      <li>2-3 ovos grandes</li>
-                     <li>sal,a gosto</li>
-                     <li>pimenta agosto</li>
+                     <li>Sal, a gosto</li>
+                     <li>Pimenta, a gosto</li>
                      <li>1 colher de sopa de manteiga ou óleo</li>
-                     <li>recheios opicionais; queijo,legumes picados,carnes cozidas,ervas.</li>
+                     <li>Recheios opcionais: queijo, legumes picados, carnes cozidas, ervas.</li>
                  </ul>
 
 
