quinto commit do HTML

--- a/index.html
+++ b/index.html
@@ -91,29 +91,29 @@
                    <hr>
                    <div class="informaçoes">
 
-                        <h2>informaçoes nutricionais</h2>
+                        <h2>Informações nutricionais</h2>
                          
-                        <p>a tabela abaixo mostra os valores 
-                        nutricionais por porção sem revheios adicionais</p>
+                        <p>A tabela abaixo mostra os valores 
+                        nutricionais por porção sem os recheios adicionais.</p>
                        
                         <table>
                                 <tr>
-                                     <th>calorias</th>
-                                     <td>277cal</td>
+                                     <th>Calorias</th>
+                                     <td>277kcal</td>
                                 </tr>
 
                                 <tr>
-                                    <th>carboidados</th>
+                                    <th>Carboidados</th>
                                     <td>0g</td>
                                 </tr>
 
                                 <tr>
-                                     <th>proteinas</th>
+                                     <th>Proteína</th>
                                      <td>20g</td>
                                 </tr>
 
                                 <tr>
-                                    <th>gordura</th>
+                                    <th>Gordura</th>
                                     <td>22g</td>
                                 </tr>
                         </table>
